[package]
name = "wh3_admin"
version = "0.1.0"
authors = ["davegarred <dave.garred@gmail.com>"]
autobins = false

[dependencies]
lambda_runtime = "0.2.1"
aws_lambda_events = "0.2.4"
rusoto_core = {version = "0.35.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "0.35.0", default_features = false, features=["rustls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"